2000-01-22  Richard M. Stallman  <rms@caffeine.ai.mit.edu>

	* replace.el (query-replace): Rename last arg to DELIMITED.
	(map-query-replace-regexp, query-replace-regexp-eval): Likewise.
	(query-replace-regexp): Likewise.

2000-01-20  Richard M. Stallman  <rms@caffeine.ai.mit.edu>

	* subr.el (with-syntax-table): Use make-symbol, not gensym.

	* emacs-lisp/lisp.el (beginning-of-defun-function):
	Variable renamed from beginning-of-defun.
	Do not call make-variable-buffer-local.
	(beginning-of-defun-raw): Use new variable name; doc fix.
	(beginning-of-defun): Doc fix.
	(end-of-defun-function): Variable renamed from end-of-defun.
	Do not call make-variable-buffer-local.
	(end-of-defun): Use new variable name; doc fix.

	* subr.el (dolist, dotimes): Copied from cl-macs.el
	and made to work.

	* mail/undigest.el (rmail-digest-end-regexps): 
	Variable replaces rmail-digest-end-regexp.
	Allows multiple regexps for detecting the end line.
	(undigestify-rmail-message): Corresponding changes.

2000-01-19  Dave Love  <fx@gnu.org>

	* files.el (user-init-file): Don't declare here -- is primitive.

	* startup.el (command-line): Check for compiled user-init-file and
	set to uncompiled version if necessary.

2000-01-18  Gerd Moellmann  <gerd@gnu.org>

	* mail/undigest.el (rmail-digest-end-regexp): New user option.
	(undigestify-rmail-message): Use it.

	* ange-ftp.el (ange-ftp-skip-msgs): Add regexp for EPRT.

2000-01-17  Gerd Moellmann  <gerd@gnu.org>

	* tmm.el (tmm-goto-completions): Adapt to prompt being part
	of mini-buffer.

2000-01-14  Gerd Moellmann  <gerd@gnu.org>

	* emacs-lisp/copyright.el (copyright-update): Removed the
	requirement for a trailing space from `copyright-regexp', to
	support copyrights with owner specified on a separate line..
	
	* align.el: New file.

	* menu-bar.el (menu-bar-tools-menu): Add EUDC submenu.

	* net/eudc.el (toplevel): Define EUDC menu for Emacs.

2000-01-13  Dave Love  <fx@gnu.org>

	* ph.el: Removed.  (Obsoleted by EUDC.)
